# youtube_music_metadata

./: README.md  __main__.py  pyproject.toml
config/: default_logging_config.json
scripts/: download_youtube_audio.py
youtube_music_metadata/: utilities.py
